# elevate-backend

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  app.py  cdk.json  deploy_from_local.sh  outputs.json  pyproject.toml
.github/workflows/: bandit.yml  deploy_backend.yml  formatting_ci.yml
elevate_be/: elevate_be_stack.py
infra/: appsync.py  config.py  elevate_be_stack.py  entity_table.py  rag_api.py
infra/appsync/: appsync.py
infra/appsync/appsync_js/admin/: getMapListAdmin.js  getNameChangeRequest.js  getNameChangeRequestData.js  getNameChangeRequests.js  requestNameChange.js  respondNameChange.js  sendRequestReceivedEmail.js  sendResponseEmail.js  (+1 more)
infra/cognito/: identity_pool.py  user_pool.py
infra/dynamodb/: entity_table.py
infra/functions/: email_sender.py  get_analytics.py  get_saved_profiles.py  get_suggestions.py  lambda_utils.py  rag_api.py  scraping_lambda.py  suggestions_cron.py
infra/layers/: layers.py
infra/layers/common_dependencies/: requirements.txt
infra/s3/: general_bucket.py
lambdas/rag_api/: index.py  requirements.txt
lambdas/rag_api/constants/: chat_constants.py  common_constants.py
lambdas/rag_api/layers/: requirements.txt
lambdas/rag_api/models/: chat.py  chat_topic.py  entity.py
lambdas/rag_api/repositories/: chat_repository.py  chat_topic_repository.py
lambdas/rag_api/utils/: logger.py
schema/: schema.graphql
src/email_sender/: handler.py
src/email_sender/constants/: name_change_emails.py
src/email_sender/usecases/: email_usecase.py
src/generate_suggestions/: handler.py
src/generate_suggestions/controllers/: suggestions_controller.py
src/generate_suggestions/layer/: requirements.txt
src/generate_suggestions/repositories/: entity_repository.py  suggestion_repository.py
src/generate_suggestions/usecases/: llm_usecase.py  suggestion_usecase.py
src/get_analytics/: handler.py
src/get_analytics/constants/: analytics_constants.py
src/get_analytics/models/: analytics.py
src/get_analytics/usecases/: analytics_usecase.py
src/get_saved_profiles/: handler.py
src/get_saved_profiles/usecases/: profiles_usecase.py
src/get_suggestions/: handler.py
src/get_suggestions/layer/: requirements.txt
src/get_suggestions/repositories/: entity_repository.py  suggestion_repository.py
src/get_suggestions/usecases/: suggestions_usecase.py
src/local_tests/: bedrock_test.py  chat_test.py  email_sender_test.py  generate_suggestions_test.py  get_analytics_test.py  get_saved_profiles_test.py  get_suggestions_test.py  graphql_gateway_test.py
src/rag_api/: Dockerfile  handler.py  index.py  requirements.txt
src/rag_api/constants/: chat_constants.py
src/rag_api/controllers/: chat_controller.py
src/rag_api/layer/: requirements.txt
src/rag_api/models/: chat.py  chat_topic.py  entity.py
src/rag_api/repositories/: chat_repository.py  chat_topic_repository.py
src/rag_api/usecases/: chat_usecase.py  knowledge_base_usecase.py  llm_usecase.py
src/scraping/: handler.py  scraper.py
src/scraping/layer/: requirements.txt
src/shared_modules/constants/: common_constants.py  entity_constants.py
src/shared_modules/repositories/: entity_repository.py  profiles_repository.py  suggestion_repository.py
tests/unit/: test_elevate_be_stack.py
(+27 files in other folders)
