[tool.poetry]
name = "elevate-be"
version = "0.1.0"
description = "Elevate"
authors = ["ArJSarmiento <rneljan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
aws-lambda-powertools = "^2.40.1"

[tool.poetry.group.rag_api.dependencies]
boto3 = "1.35.76"
pynamodb = "6.0.1"
llama-index = "0.11.1"
llama-index-embeddings-bedrock = "^0.3.0"
llama-index-vector-stores-pinecone = "^0.2.1"
llama-index-llms-bedrock = "^0.2.1"

[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "2.171.1"
constructs = "^10.4.2"
aws-cdk-aws-lambda-python-alpha = "2.171.1a0"
python-dotenv = "1.0.1"
shortuuid = "^1.0.13"
pre-commit = "^4.1.0"
detect-secrets = "1.5.0"

[tool.poetry.group.format.dependencies]
pytest = "6.2.5"
boto3-stubs = "^1.34.140"
ruff = "0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = "dynamic"
indent-style = "space"
docstring-code-format = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
